# GenerateMarkdown

./: .gitignore  ExternalTools.md  README.md  REPRODUCIBILITY.md  convert_to_markdown.py  convert_to_markdown.sh  guidelines.md  pyproject.toml
markdown_converter/: __init__.py  archive.py  capabilities.py  cli.py  config.py  converters.py  core.py  errors.py  manifest.py  markdown.py  package_extraction.py  report.py  results.py  tools.py
markdown_converter/handlers/: __init__.py  design.py  documents.py  media.py  text.py  visuals.py
