[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "local-markdown-converter"
version = "5.0.0"
description = "Local mixed-format project to Markdown converter"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fonttools>=4.0",
  "markitdown[pdf,docx,pptx,xlsx,xls]>=0.1",
]

[project.optional-dependencies]
apple-silicon-transcription = ["mlx-whisper>=0.4"]
intel-transcription = ["openai-whisper>=20231117"]
design = ["psd-tools>=1.10"]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
convert-to-markdown = "markdown_converter.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["markdown_converter"]

[tool.ruff]
line-length = 140
target-version = "py311"